@@ -36,7 +36,6 @@
     <property name="build.src" value="${basedir}/src"/>
     <property name="build.src.java" value="${basedir}/src/java"/>
     <property name="build.src.resources" value="${basedir}/src/resources"/>
-    <property name="build.src.driver" value="${basedir}/drivers/java/src" />
     <property name="avro.src" value="${basedir}/src/avro"/>
     <property name="build.src.gen-java" value="${basedir}/src/gen-java"/>
     <property name="build.lib" value="${basedir}/lib"/>
@@ -46,7 +45,6 @@
     <property name="build.classes" value="${build.dir}/classes"/>
     <property name="build.classes.main" value="${build.classes}/main" />
     <property name="build.classes.thrift" value="${build.classes}/thrift" />
-    <property name="build.classes.cql" value="${build.classes}/cql" />
     <property name="javadoc.dir" value="${build.dir}/javadoc"/>
     <property name="javadoc.jars.dir" value="${build.dir}/javadocs"/>
     <property name="interface.dir" value="${basedir}/interface"/>
@@ -161,7 +159,6 @@
             message="Not a source artifact, stopping here." />
         <mkdir dir="${build.classes.main}"/>
         <mkdir dir="${build.classes.thrift}"/>
-        <mkdir dir="${build.classes.cql}"/>
         <mkdir dir="${test.lib}"/>
         <mkdir dir="${test.classes}"/>
         <mkdir dir="${build.src.gen-java}"/>
@@ -396,7 +393,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
           <dependency groupId="log4j" artifactId="log4j" version="1.2.16" />
           <dependency groupId="org.apache.cassandra" artifactId="cassandra-all" version="${version}" />
           <dependency groupId="org.apache.cassandra" artifactId="cassandra-thrift" version="${version}" />
-          <dependency groupId="org.apache.cassandra" artifactId="cassandra-cql" version="${version}" />
         </dependencyManagement>
         <developer id="alakshman" name="Avinash Lakshman"/>
         <developer id="antelder" name="Anthony Elder"/>
@@ -502,22 +498,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
         <dependency groupId="commons-lang" artifactId="commons-lang"/>
         <dependency groupId="org.slf4j" artifactId="slf4j-api"/>
         <dependency groupId="org.apache.thrift" artifactId="libthrift"/>
-      </artifact:pom>
-      <artifact:pom id="cql-pom"
-                    artifactId="cassandra-cql"
-                    url="http://cassandra.apache.org"
-                    name="Apache Cassandra">
-        <parent groupId="org.apache.cassandra"
-                artifactId="cassandra-parent"
-                version="${version}"/>
-        <scm connection="${scm.connection}" developerConnection="${scm.developerConnection}" url="${scm.url}"/>
-        <dependency groupId="com.google.guava" artifactId="guava"/>
-        <dependency groupId="org.slf4j" artifactId="slf4j-api"/>
-        <dependency groupId="org.apache.thrift" artifactId="libthrift"/>
-        <dependency groupId="org.apache.cassandra" artifactId="cassandra-thrift"/>
-        <dependency groupId="org.apache.cassandra" artifactId="cassandra-all"/>
-        <!-- because cassandra-all uses log4j, and we need cassandra-all, consumers must use log4j, so force log4j version of slf4j -->
-        <dependency groupId="org.slf4j" artifactId="slf4j-log4j12" scope="runtime"/>
       </artifact:pom>
 
       <artifact:pom id="dist-pom"
@@ -688,11 +668,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
             <src path="${build.src.gen-java}"/>
             <classpath refid="cassandra.classpath"/>
         </javac>
-        <javac debug="true" debuglevel="${debuglevel}"
-               destdir="${build.classes.cql}" includeantruntime="false">
-            <src path="${build.src.driver}" />
-            <classpath refid="cassandra.classpath"/>
-        </javac>
         <copy todir="${build.classes.main}">
             <fileset dir="${build.src.resources}" />
         </copy>
@@ -750,20 +725,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
         <!-- </section> -->
         </manifest>
       </jar>
-
-      <!-- CQL driver Jar -->
-      <artifact:writepom pomRefId="cql-pom" 
-              file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"/>
-      <jar jarfile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.jar"
-           basedir="${build.classes.cql}">
-        <manifest>
-          <attribute name="Implementation-Title" value="Cassandra"/>
-          <attribute name="Implementation-Version" value="${version}"/>
-          <attribute name="Implementation-Vendor" value="Apache"/>
-          <attribute name="Class-Path"
-                     value="${ant.project.name}-thrift-${version}.jar" />
-        </manifest>
-      </jar>
     </target>
 
     <!--
@@ -789,23 +750,11 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
         <fileset dir="${build.src.gen-java}" defaultexcludes="yes">
           <include name="org/apache/**/*.java"/>
         </fileset>
-        <fileset dir="${build.src.driver}" defaultexcludes="yes">
-          <include name="org/apache/**/*.java"/>
-        </fileset>
         </filesets>
       </create-javadoc>
       <jar jarfile="${build.dir}/${final.name}-javadoc.jar"
            basedir="${javadoc.jars.dir}/main"/>
 
-      <create-javadoc destdir="${javadoc.jars.dir}/cql">
-        <filesets>
-        <fileset dir="${build.src.driver}" defaultexcludes="yes">
-          <include name="org/apache/**/*.java"/>
-        </fileset>
-        </filesets>
-      </create-javadoc>
-      <jar jarfile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-javadoc.jar"
-           basedir="${javadoc.jars.dir}/cql"/>
       <!-- javadoc task always rebuilds so might as well remove the generated docs to prevent 
            being pulled into the distribution by accident -->
       <delete quiet="true" dir="${javadoc.jars.dir}"/>
@@ -825,14 +774,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
           <include name="org/apache/**/*.java"/>
         </fileset>
         <fileset dir="${build.src.gen-java}" defaultexcludes="yes">
-          <include name="org/apache/**/*.java"/>
-        </fileset>
-        <fileset dir="${build.src.driver}" defaultexcludes="yes">
-          <include name="org/apache/**/*.java"/>
-        </fileset>
-      </jar>
-      <jar jarfile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-sources.jar">
-        <fileset dir="${build.src.driver}" defaultexcludes="yes">
           <include name="org/apache/**/*.java"/>
         </fileset>
       </jar>
@@ -929,14 +870,12 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
                 algorithm="MD5">
         <fileset dir="${build.dir}">
           <include name="*.tar.gz" />
-          <include name="${ant.project.name}-cql-${cql.driver.version}.jar" />
         </fileset>
       </checksum>
       <checksum forceOverwrite="yes" todir="${build.dir}" fileext=".sha"
                 algorithm="SHA">
         <fileset dir="${build.dir}">
           <include name="*.tar.gz" />
-          <include name="${ant.project.name}-cql-${cql.driver.version}.jar" />
         </fileset>
       </checksum>
 
@@ -966,7 +905,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
      destdir="${test.classes}">
       <classpath>
         <path refid="cassandra.classpath"/>
-        <pathelement location="${build.classes.cql}"/>
       </classpath>
       <src path="${test.unit.src}"/>
       <src path="${test.long.src}"/>
@@ -1019,7 +957,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
         <classpath>
           <path refid="cassandra.classpath" />
           <pathelement location="${test.classes}"/>
-          <pathelement location="${build.classes.cql}"/>
           <path refid="cobertura.classpath"/>
           <pathelement location="${test.conf}"/>
           <fileset dir="${test.lib}">
@@ -1205,8 +1142,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
   <classpathentry kind="src" path="src/java"/>
   <classpathentry kind="src" path="src/gen-java"/>
   <classpathentry kind="src" path="interface/thrift/gen-java"/>
-  <classpathentry kind="src" path="drivers/java/src"/>
-  <classpathentry kind="src" path="drivers/java/test"/>
   <classpathentry kind="src" path="test/unit"/>
   <classpathentry kind="src" path="test/long"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -1284,17 +1219,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
   	<delete dir="build/eclipse-classes" />
   </target>
 
-  <target name="py-cql-driver"
-          description="Generate Python CQL driver artifact">
-    <echo>Creating Python CQL driver artifact...</echo>
-    <exec executable="python" dir="${basedir}/drivers/py" failonerror="true">
-      <arg line="setup.py" />
-      <arg line="sdist" />
-      <arg line="--dist-dir" />
-      <arg line="${build.dir}" />
-    </exec>
-  </target>
-
   <!-- Publish artifacts to Maven repositories -->
   <target name="mvn-install"
           depends="maven-declare-dependencies,artifacts,jar,sources-jar,javadoc-jar"
@@ -1336,16 +1260,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
              classifier="sources"/>
     <install pomFile="${build.dir}/${final.name}.pom"
              file="${build.dir}/${final.name}-javadoc.jar"
-             classifier="javadoc"/>
-
-    <!-- the cassandra-cql jar -->
-    <install pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-             file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.jar"/>
-    <install pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-             file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-sources.jar"
-             classifier="sources"/>
-    <install pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-             file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-javadoc.jar"
              classifier="javadoc"/>
   </target>
 
@@ -1390,16 +1304,6 @@ url=${svn.entry.url}?pathrev=${svn.entry.commit.revision}
             classifier="sources"/>
     <deploy pomFile="${build.dir}/${final.name}.pom"
             file="${build.dir}/${final.name}-javadoc.jar"
-            classifier="javadoc"/>
-
-    <!-- the cassandra-cql jar -->
-    <deploy pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-            file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.jar"/>
-    <deploy pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-            file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-sources.jar"
-            classifier="sources"/>
-    <deploy pomFile="${build.dir}/${ant.project.name}-cql-${cql.driver.version}.pom"
-            file="${build.dir}/${ant.project.name}-cql-${cql.driver.version}-javadoc.jar"
             classifier="javadoc"/>
   </target>
 
