@@ -105,8 +105,12 @@ public class SSTableReader extends SSTable
 
     public static SSTableReader open(Descriptor desc) throws IOException
     {
-        Set<Component> components = componentsFor(desc, Descriptor.TempState.ANY);
-        return open(desc, components, Schema.instance.getCFMetaData(desc.ksname, desc.cfname), StorageService.getPartitioner());
+        return open(desc, Schema.instance.getCFMetaData(desc.ksname, desc.cfname));
+    }
+
+    public static SSTableReader open(Descriptor desc, CFMetaData metadata) throws IOException
+    {
+        return open(desc, componentsFor(desc, Descriptor.TempState.LIVE), metadata, StorageService.getPartitioner());
     }
 
     public static SSTableReader open(Descriptor descriptor, Set<Component> components, CFMetaData metadata, IPartitioner partitioner) throws IOException
